--- a/angular-src/src/app/home/navbar/navbar.component.html
+++ b/angular-src/src/app/home/navbar/navbar.component.html
@@ -22,7 +22,7 @@
       <ul style="flex-direction: row;" class=" nav navbar-nav">
         <li class="active"> 
             <!-- <i class="display icon "></i> -->
-            <button type="submit" class="btn-link btn anchor text-muted navbar-btn">Login</button>
+            <button type="submit" class="btn-link btn anchor text-muted navbar-btn"><a routerLink="/auth" >Login</a></button>
         </li>
       </ul>
     </div>
