--- a/angular-src/src/app/home/body/body.component.html
+++ b/angular-src/src/app/home/body/body.component.html
@@ -14,7 +14,7 @@
                 <ul class="list-group list-group-flush">
                     <!-- results of ngFor is passed to appFilter with argument searchText -->
                     <li class="list-group-item" *ngFor="let c of arrName | appFilter: searchText">
-                        {{c}}
+                       <a routerLink="/mainpage" class="hover">{{c}}</a> 
                     </li>
                 </ul>
             </div>
